# rust-interop-playground

./: .gitignore  BUILD  Cargo.toml  LICENSE  README.md  WORKSPACE
cargo/: BUILD.bazel
pipelining/: bar.rs  build.sh  foo.rs  libbar.rlib  libbar.rmeta  libfoo.rlib  libfoo.rmeta  libmiddle.rlib  main  main.rs  middle.rs
src/tutorial/: BUILD  cxxtest.cc  cxxtest.h  ffi.rs  main.cc  main.rs  rusttest.rs
